# agmip-monorepo

./: bazel-agmip-monorepo
translator-salus/: BUILD.bazel
translator-salus/scratch_files/: AddAgMIP.ipynb  UnitConvert.csv  salus_AgMIP.ddb.xml  salus_AgMIP_Mapped.ddb.xml  salus_AgMIP_Units.ddb.xml
translator-salus/src/main/java/org/agmip/translators/salus/: SalusXmlWeatherHandler.java
